--- a/app/elements.html
+++ b/app/elements.html
@@ -243,6 +243,12 @@
             </div>
             <div class="element-list-svg__icon">
                 <svg class="icon-el">
+                    <use xlink:href="#cart--color"></use>
+                </svg>
+                <div class="element-list-svg__name">cart--color</div>
+            </div>
+            <div class="element-list-svg__icon">
+                <svg class="icon-el">
                     <use xlink:href="#cart"></use>
                 </svg>
                 <div class="element-list-svg__name">cart</div>
