--- a/app/elements.html
+++ b/app/elements.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="bower/jquery-nice-select/css/nice-select.css" />
+    <link rel="stylesheet" href="css/jquery.datetimepicker.min.css" />
     <!--endbuild-->
     <!--link(rel="stylesheet", href="//deliveryWiget.iiko.ru/v2_0/assets/css/style.css" )-->
     <script src="js/config.js"></script>
@@ -241,6 +242,12 @@
                     <use xlink:href="#card"></use>
                 </svg>
                 <div class="element-list-svg__name">card</div>
+            </div>
+            <div class="element-list-svg__icon">
+                <svg class="icon-el">
+                    <use xlink:href="#caret-down"></use>
+                </svg>
+                <div class="element-list-svg__name">caret-down</div>
             </div>
             <div class="element-list-svg__icon">
                 <svg class="icon-el">
