--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="bower/jquery-nice-select/css/nice-select.css" />
+    <link rel="stylesheet" href="css/jquery.datetimepicker.min.css" />
     <!--endbuild-->
     <!--link(rel="stylesheet", href="//deliveryWiget.iiko.ru/v2_0/assets/css/style.css" )-->
     <script src="js/config.js"></script>
